fix#247: 요인문구 조회시 id도 함께 응답